lab1_week1_day3a

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <header></header>
-        <img src="images/puppy.jpg" alt="my puppy" width="1280" height="564">
+        <img src="images/puppy.jpg" alt="my puppy" height="564">
     <div class="main-header">
         <div class="logo">
             <img src="images/cb.jpg" alt="charlie brown" width="125">
