--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <header></header>
-        <img src="images/puppy.jpg" alt="my puppy" width="1280" height="564">
+        <img src="images/puppy.jpg" alt="my puppy" height="564">
     <div class="main-header">
         <div class="logo">
             <img src="images/cb.jpg" alt="charlie brown" width="125">
@@ -27,7 +27,7 @@
                 <h2>Puppy adoption</h2>
                 <h3>Pocket bully for sale</h3>
                 <p>Pocket bullies are a specialized mix breed between a bull dog and a pit bull.  They are small, compact, muscular, and loyal breed.</p>
-                <h3>Where are these puppies located</h3>
+                <h3>Where are these puppies located?</h3>
                 <p>Located within San Antonio, Texas.</p>
 
                 <h3>puppy 1 Image</h3>
