lab2_week2_day3

--- a/activities.html
+++ b/activities.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Add icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--Embed Style Method-->
+        <!-- Add icon library -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body id="home">
+<body id="activities">
     <div id="container">
         <header>
-        <!--<img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">-->
     <div class="main-header">
         <div class="logo">
-            <img src="images/cb.jpg" alt="Charlie brown" width="125">
+            <img src="images/cb.jpg" alt="Charlie Brown" width="125">
         </div>
             <nav class="main-menu">
                 <ul>
@@ -29,11 +27,48 @@
         </div>
     </header>
             <main>
-                <h2>Introducing Pumpkin the pocket bully</h2>
-                <h3>Would you like to adopt him?</h3>
-                <p>Pocket Bully is a new mix breed that is half bull dog and hald pitbull.  They will stay short and stocky, muscular looking, and very loyal family dogs</p>
-                <h3>Where is he located?</h3>
-                <p>Located in San Antonio, Texas.</p>
+                <h1>Pumpkin profile</h1>
+                <p> Pumpkin the pocket bully activities and things he loves to do</p>
+                <table>
+                    <caption>Pumpkin the pocket bully</caption>
+                    <thead>
+                        <tr>
+                            <th>Activity</th>
+                            <th>tricks</th>
+                            <th>loves</th>
+                            <th>food</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Hiking</td>
+                            <td>shake hands</td>
+                            <td>belly rub</td>
+                            <td>high protien dog food</td>
+                        </tr>
+                        <tr>
+                            <td>Walks</td>
+                            <td>sit</td>
+                            <td>hugs</td>
+                            <td>any meat snacks</td>
+                        </tr>
+                        <tr>
+                            <td>jogging</td>
+                            <td>beg</td>
+                            <td>kisses</td>
+                            <td>steak</td>
+                        </tr>
+                        <tr>
+                            <td>Biking</td>
+                            <td>lay</td>
+                            <td>fetch</td>
+                            <td>chicken</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                    </tfoot>
+    
+                </table>  
                 <section>
                     <ul id="puppies">
                         <li class="puppy">
@@ -55,9 +90,9 @@
                             <img src="images/puppy6.jpg" alt="Partner Tour Group">
                         </li>
                     </ul>
-                </section>
+                </section>             
             </main>
-      
+        </div>
     </div>
     <div id="nondisclaimer"></div>
     <div class="copy">
