--- a/puppy.html
+++ b/puppy.html
@@ -5,18 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Add icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--Embed Style Method-->
+        <!-- Add icon library -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body id="home">
+<body id="cliffs">
     <div id="container">
         <header>
-        <!--<img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">-->
     <div class="main-header">
         <div class="logo">
-            <img src="images/cb.jpg" alt="Charlie brown" width="125">
+            <img src="images/cb.jpg" alt="Great Cliffs Logo" width="125">
         </div>
             <nav class="main-menu">
                 <ul>
@@ -29,11 +27,26 @@
         </div>
     </header>
             <main>
-                <h2>Introducing Pumpkin the pocket bully</h2>
-                <h3>Would you like to adopt him?</h3>
-                <p>Pocket Bully is a new mix breed that is half bull dog and hald pitbull.  They will stay short and stocky, muscular looking, and very loyal family dogs</p>
-                <h3>Where is he located?</h3>
-                <p>Located in San Antonio, Texas.</p>
+                <h2>Pumpkin the pocket bully:</h2>
+                <p>The greatest pocket bully any family can ask for </p>
+                <p>well trained, house broken, very loyal, and very playful.</p>
+                <p>loves treats and can do tricks.</p>
+                <section>
+                    <ul id="pockets">
+                        <li class="pocket"> Pumpkin 1
+                            <img src="images/puppy6.jpg" alt="east river cliff">
+                        </li>
+                        <li class="pocket"> Pumpkin 2
+                            <img src="images/puppy5.jpg" alt="north mountain cliff">
+                        </li>
+                        <li class="pocket"> Pumpkin 3
+                            <img src="images/puppy4.jpg" alt="south canyon cliff">
+                        </li>
+                        <li class="pocket"> Pumpkin 4
+                            <img src="images/puppy2.jpg" alt="west sea cliff">
+                    </ul>
+                </section>               
+                
                 <section>
                     <ul id="puppies">
                         <li class="puppy">
@@ -54,10 +67,10 @@
                         <li class="puppy">
                             <img src="images/puppy6.jpg" alt="Partner Tour Group">
                         </li>
-                    </ul>
                 </section>
+
             </main>
-      
+        </div>
     </div>
     <div id="nondisclaimer"></div>
     <div class="copy">
