--- a/index.html
+++ b/index.html
@@ -59,19 +59,20 @@
             </main>
       
     </div>
-    <div id="nondisclaimer"></div>
-    <div class="copy">
-        <footer>&copy;Copyright 2020 :: puppy.com</footer>
-        
-    </div>
-    <div class="social".>
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-twitter"></a>
-    </div>
-    <div id="disclaimer".>
-        <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
-    </div>
-
+    <footer>
+        <div id="nondisclaimer">
+            <div class="copy">
+                <p>&copy;Copyright 2020 :: puppy.com</p>
+            </div>
+            <div class="social".>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-twitter"></a>
+            </div>
+        </div>
+        <div id="disclaimer".>
+            <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
+        </div>
+    </footer>
 </body>
 </html>
