--- a/activities.html
+++ b/activities.html
@@ -22,6 +22,7 @@
                     <li><a href="puppy.html">puppy</a></li>
                     <li><a href="activities.html">profile</a></li>
                     <li><a href="contact.html">Contacts</a></li>
+                    <li><a href="Gallery.html">Gallery</a></li>
                 </ul>
             </nav>
         </div>
