--- a/gallery.html
+++ b/gallery.html
@@ -29,12 +29,12 @@
     </header>
             <main>
                 <h1>Gallery of pocket bullies</h1>
-
+                <section>
+                    <ul id="pockets">
+                    </ul>
+                </section>
             </main>
-            <section>
-                <ul id="pockets">
-                </ul>
-            </section>
+
         </div>
     </div>
     <footer>
@@ -57,14 +57,15 @@
     var fileNames = []; //Declare an empty element to store image file names
     var imageList = []; //Declare an empty array to store html list that contain an image
     var image; //Declare an empty variable to store the assemnbled image list codes
-    var openList = "<li id='pockets'>"; //Delare a caiable to contain open list tag
+    var openList1 = "<li id='photos"
+    var openList2 = "'>"; //Delare a caiable to contain open list tag
     var closeList = "</li>";  //Delacre a cariable to contain close list tag
 
     //create a loop to create 6 images starting with index of 0
     for (var i=0; i<10; i++) {
         fileNames.push("pocket"+(i+1));  //Create image file name and store in array
-        photos.push("<img src='images/"+fileNames[i]+".jpg' alt='Pocket bullies "+(i+1)+"' width='340'>"); //Assemble file name into image element and store in an array
-        image = openList + photos[i] + closeList;  //Assemble image element from array with list elements and store in a variable
+        photos.push("<img src='images/"+fileNames[i]+".jpg'>"); //Assemble file name into image element and store in an array
+        image = openList1 + (i + 1) + openList2 + photos[i] + closeList;  //Assemble image element from array with list elements and store in a variable
         imageList.push(image);  //Store(push) the assembled list codes into array
     }
 
