--- a/gallery.html
+++ b/gallery.html
@@ -61,11 +61,23 @@
     var openList2 = "'>"; //Delare a caiable to contain open list tag
     var closeList = "</li>";  //Delacre a cariable to contain close list tag
 
+    var opencaption = "<p class='captions'>";
+    var closecaption = "</p>";
+    var captiontext = [
+        "1","2","3","4","5","6","7","8","9","10"
+    ];
+
+    var opendescription = "<div id='description'>";
+    var closedescription = "</div>";
+    var descriptiontext = [
+        "dog1","dog2","dog3","dog4","dog5","dog6","dog7","dog8","dog9","dog10"
+    ];
+
     //create a loop to create 6 images starting with index of 0
     for (var i=0; i<10; i++) {
         fileNames.push("pocket"+(i+1));  //Create image file name and store in array
         photos.push("<img src='images/"+fileNames[i]+".jpg'>"); //Assemble file name into image element and store in an array
-        image = openList1 + (i + 1) + openList2 + photos[i] + closeList;  //Assemble image element from array with list elements and store in a variable
+        image = openList1 + (i + 1) + openList2 + photos[i] + opendescription + descriptiontext[i] + closedescription + "<br>"+ opencaption + captiontext[i] + closecaption + closeList;  //Assemble image element from array with list elements and store in a variable
         imageList.push(image);  //Store(push) the assembled list codes into array
     }
 
